# js-interpreter

./: .gitignore  CMakeLists.txt  README.md  download-libraries.sh
examples/: fibonacci.js  primes.js  threeNPlusOne.js
src/: builtinfunction.h  functiondeclaration.h  global.cpp  global.h  interpreter.cpp  interpreter.h  main.cpp  memory.cpp  memory.h  object.cpp  object.h  parser.cpp  parser.h  valuecontext.cpp  valuecontext.h
unit-test/: CMakeLists.txt  array_test.cpp  built_in_test.cpp  control_flow_test.cpp  expression_test.cpp  function_test.cpp  object_test.cpp  simple_test.cpp  string_test.cpp  testcommon.cpp  testcommon.h
